Low z-index caused issues when the overlay is disabled.

--- a/assets/sass/partials/_pum_styles.scss
+++ b/assets/sass/partials/_pum_styles.scss
@@ -82,7 +82,7 @@
   top: 100px;
   position: absolute;
   margin-bottom: 3em;
-  z-index: 1;
+  z-index: 1999999999;
 
   &.pum-responsive {
 
